fix (styles): #2441 keep link menu button visible while context menu is

--- a/content-src/styles/variables.scss
+++ b/content-src/styles/variables.scss
@@ -150,6 +150,7 @@ $sidebar-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.08);
 }
 
 @mixin link-menu-button {
+  &.active,
   &:hover {
     .link-menu-button {
       transform: scale(1);
